--- a/PurchaseMate/Base.lproj/Main.storyboard
+++ b/PurchaseMate/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="MqM-go-RSp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="MqM-go-RSp">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -148,16 +148,14 @@
                                 </subviews>
                                 <animations/>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="V29-oe-GIh">
-                                <rect key="frame" x="310" y="535" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6Xj-Ae-IDL">
+                                <rect key="frame" x="305" y="540" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" image="starEmpty">
-                                    <color key="titleColor" red="0.023529411760000001" green="0.70980392160000005" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" image="starEmpty"/>
                                 <connections>
-                                    <segue destination="Enw-2V-boP" kind="push" id="FPz-h6-e9l"/>
+                                    <segue destination="Enw-2V-boP" kind="push" id="yC9-F7-aAH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -175,19 +173,19 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="demoTitleLabel" destination="bpD-IE-xwB" id="00B-2I-thd"/>
-                        <outlet property="democratLabel" destination="NU9-fU-g8U" id="xlU-d4-q8K"/>
-                        <outlet property="ethicsLabel" destination="xsG-qd-5tg" id="rFR-RN-NrO"/>
-                        <outlet property="ethicsTitleLabel" destination="4Gr-8m-f3d" id="AbA-If-kTg"/>
-                        <outlet property="indiLabel" destination="84t-hN-zZ6" id="5Xu-jN-MTW"/>
-                        <outlet property="indiTitleLabel" destination="hyx-5F-2aK" id="VjW-7o-x5a"/>
-                        <outlet property="lobbyTitleLabel" destination="866-tp-Hge" id="8kD-TU-cgX"/>
-                        <outlet property="lobbyingLabel" destination="zLb-k6-rRy" id="2EE-39-qho"/>
-                        <outlet property="repubTitleLabel" destination="pE5-5A-9H8" id="LWH-a6-reH"/>
-                        <outlet property="republicanLabel" destination="3xu-kG-5FT" id="kpq-I0-IJv"/>
-                        <outlet property="reviewButton" destination="V29-oe-GIh" id="7BQ-uQ-OTh"/>
-                        <outlet property="scrollView" destination="i2t-N4-npQ" id="l23-cb-UAK"/>
-                        <outlet property="titleLabel" destination="3Jf-rG-pqP" id="8Me-sp-Vr3"/>
+                        <outlet property="demoTitleLabel" destination="bpD-IE-xwB" id="rgv-So-jhi"/>
+                        <outlet property="democratLabel" destination="NU9-fU-g8U" id="oCd-Db-fsz"/>
+                        <outlet property="ethicsLabel" destination="xsG-qd-5tg" id="rL0-DL-pkE"/>
+                        <outlet property="ethicsTitleLabel" destination="4Gr-8m-f3d" id="eWv-NR-cgt"/>
+                        <outlet property="indiLabel" destination="84t-hN-zZ6" id="3i7-To-goU"/>
+                        <outlet property="indiTitleLabel" destination="hyx-5F-2aK" id="epv-He-pmG"/>
+                        <outlet property="lobbyTitleLabel" destination="866-tp-Hge" id="N80-b0-kHi"/>
+                        <outlet property="lobbyingLabel" destination="zLb-k6-rRy" id="YPT-b2-WhB"/>
+                        <outlet property="repubTitleLabel" destination="pE5-5A-9H8" id="N4L-Mm-BfR"/>
+                        <outlet property="republicanLabel" destination="3xu-kG-5FT" id="Rcx-8d-8FK"/>
+                        <outlet property="reviewButton" destination="6Xj-Ae-IDL" id="GqW-Kr-a80"/>
+                        <outlet property="scrollView" destination="i2t-N4-npQ" id="4jj-VQ-zsZ"/>
+                        <outlet property="titleLabel" destination="3Jf-rG-pqP" id="kvy-YS-D0b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tg-4O-kAx" userLabel="First Responder" sceneMemberID="firstResponder"/>
